k8s/deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: static-deployment
spec:
  selector:
    matchLabels:
      app: static-deployment
  replicas: 1 
  template:
    metadata:
      labels:
        app: static-deployment
    spec:
      containers:
      - name: static-deployment
        image:  982775349412.dkr.ecr.us-east-2.amazonaws.com/static:latest
        ports:
        - containerPort: 80
