k8s/ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: static-ing
  namespace: static
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: 

    http:
      paths:
      - path:
        backend:
          serviceName: static-service
          servicePort: 80
